src/test/ui/deduplicate-diagnostics.duplicate.stderr
error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:8:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument

error: cannot find derive macro `Unresolved` in this scope
  --> $DIR/deduplicate-diagnostics.rs:4:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^

error: cannot find derive macro `Unresolved` in this scope
  --> $DIR/deduplicate-diagnostics.rs:4:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^

error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:8:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument

error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:8:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0452`.
